# antigravity-workspace-template

./: AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_CN.md  README_ES.md  docker-compose.yml  mcp_servers.json
.antigravity/skills/: mql5-complete.md  mql5-ea-dev.md
.github/workflows/: test.yml
TradingStrategies/: .windsurfrules  CONTEXT.md
TradingStrategies/.antigravity/: rules.md
TradingStrategies/SupertrendGridHybrid/: SupertrendGridHybrid.ex5  (+1 more)
engine/: .env.example  agent.py  pyproject.toml
engine/antigravity_engine/: __main__.py  _cli_entry.py  agent.py  config.py  swarm.py  swarm_demo.py
engine/antigravity_engine/agents/: base_agent.py  coder_agent.py  researcher_agent.py  reviewer_agent.py  router_agent.py
engine/antigravity_engine/hub/: agents.py  pipeline.py  scanner.py
engine/antigravity_engine/skills/: agent_repo_init_core.py  loader.py
engine/antigravity_engine/skills/agent-repo-init/: SKILL.md
engine/memory/: agent_memory.md  agent_summary.md
engine/src/: agent.py  config.py  mcp_client.py  memory.py
engine/src/skills/: agent_repo_init_core.py
engine/src/skills/agent-repo-init/: tools.py
engine/src/tools/: memory_tools.py
engine/tests/: test_agent.py  test_agent_repo_init_skill.py  test_create_model.py  test_execution_tool.py  test_factory.py  test_hub_agents_import.py  test_hub_pipeline.py  test_hub_scanner.py  test_local_sandbox.py  test_mcp.py  test_memory.py  test_memory_markdown.py  test_memory_tools.py  test_microsandbox_sandbox.py  test_path_resolution.py  test_skills_loader.py  test_swarm.py
openspec/: project.md
(+43 files in other folders)
