[project]
name = "antigravity-engine"
version = "0.1.0"
description = "Production-grade AI agent runtime and Knowledge Hub"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "requests",
    "mcp[cli]>=1.0.0",
    "openai-agents[litellm]",
]

[project.scripts]
ag-engine = "antigravity_engine._cli_entry:engine_main"
ag-hub = "antigravity_engine._cli_entry:hub_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["antigravity_engine"]

[project.optional-dependencies]
dev = ["pytest"]
